--- a/contact.html
+++ b/contact.html
@@ -175,7 +175,7 @@
                         Business Verticals
                     </div>
                     <div class="footer-name">
-                        Blue Music
+                        BlueChipFx
                     </div>
                     <div class="footer-name">
                         Acre n Yard
@@ -184,7 +184,7 @@
                         BlueChip Entertainment
                     </div>
                     <div class="footer-name">
-                        BlueChip TradeX
+                        Blue Music
                     </div>
                 </div>
                 <div class="footer-section1">
