--- a/ouroffering.html
+++ b/ouroffering.html
@@ -85,7 +85,7 @@
                     </div>
                     <div class="header-content hidden">
                         A perfect base for forex trading and stock market investment.
-                        Launched in 2021, BluechipFx is a young trading platform and to its
+                        Launched in 2021, BlueChipFx is a young trading platform and to its
                         credit still boasts a satisfied customer base of thousands of active
                         user worldwide.The platform provides easy access to investable
                         products such as currencies, foreign stocks and bonds, commodities
@@ -93,7 +93,7 @@
                         renowned institutional investors until 2021 to provide financial
                         advisory services and Porfolio management services(PMS).<br><br>
                         Having entered the private investment market and added many
-                        clients to our group BluechipFx now wants to complete with
+                        clients to our group BlueChipFx now wants to complete with
                         the services of world class brokers.All of this and at the same time
                         improving the quality of life for our customers.As we speak,
                         the company has earned up to 500,000 brokerage deals from its secure
@@ -182,10 +182,11 @@
                         <i class="fa-solid fa-phone-volume" id="footer-phone"></i> +97142556168
                     </div>
                     <div class="footer-mail">
-                        <i class="fa-solid fa-envelope" id="footer-phone"></i> info@smaple.com
+                        <i class="fa-solid fa-envelope" id="footer-phone"></i> info@bluechipgroup.me
                     </div>
                     <div class="footer-location">
-                        <i class="fa-solid fa-location-dot" id="footer-phone"></i> 012 Sample, Street, Dubai
+                        <i class="fa-solid fa-location-dot" id="footer-phone"></i> Al Jawhara Building – Khalid Bin Al
+                        Waleed Road - Office 308 – Dubai, UAE.
                     </div>
                 </div>
                 <div class="footer-section1">
@@ -193,7 +194,7 @@
                         Business Verticals
                     </div>
                     <div class="footer-name">
-                        Blue Music
+                        BlueChipFx
                     </div>
                     <div class="footer-name">
                         Acre n Yard
@@ -202,7 +203,7 @@
                         BlueChip Entertainment
                     </div>
                     <div class="footer-name">
-                        BlueChip TradeX
+                        Blue Music
                     </div>
                 </div>
                 <div class="footer-section1">
