--- a/victories.html
+++ b/victories.html
@@ -63,6 +63,9 @@
             </div>
             <div class="header-left">
                 <div class="header-left-inner">
+                    <div class="awardsimg">
+                        <img src="./allimages/Awards.png" alt="" class="awardimg">
+                    </div>
                     <div class="header-header hidden">
                         Awarded fastest growing platform at Forex Expo 2022
                     </div>
@@ -84,6 +87,9 @@
     <div class="acre">
         <div class="acre-insider">
             <div class="acre-left">
+                <div class="firstimg">
+                    <img src="./allimages/first.png" alt="" class="firstimg1">
+                </div>
                 <div class="acre-left-header hidden">
                     First forex company to become associate sponsers for blockbuster movie releases all over the MENA
                     region.
@@ -99,8 +105,11 @@
         <div class="tradex-insider">
             <div class="tradex-left">
                 <div class="tradex-left-inner">
+                    <div class="advisorimg">
+                        <img src="./allimages/advisor.png" alt="" class="advisorimage">
+                    </div>
                     <div class="tradex-header hidden">
-                        First Financial Advisory to be displayed<br> on Burj Khalifa
+                        First Financial Advisory to be displayed on Burj Khalifa
                     </div>
                     <!-- <div class="tradex-content hidden">
                         " Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic perspiciatis atque nisi qui eaque
@@ -155,10 +164,10 @@
                         <i class="fa-solid fa-phone-volume" id="footer-phone"></i> +97142556168
                     </div>
                     <div class="footer-mail">
-                        <i class="fa-solid fa-envelope" id="footer-phone"></i> info@smaple.com
+                        <i class="fa-solid fa-envelope" id="footer-phone"></i> info@bluechipgroup.me
                     </div>
                     <div class="footer-location">
-                        <i class="fa-solid fa-location-dot" id="footer-phone"></i> 012 Sample, Street, Dubai
+                        <i class="fa-solid fa-location-dot" id="footer-phone"></i>  Al Jawhara Building – Khalid Bin Al Waleed Road - Office 308 – Dubai, UAE.
                     </div>
                 </div>
                 <div class="footer-section1">
@@ -166,7 +175,7 @@
                         Business Verticals
                     </div>
                     <div class="footer-name">
-                        Blue Music
+                        BlueChipFx
                     </div>
                     <div class="footer-name">
                         Acre n Yard
@@ -175,7 +184,7 @@
                         BlueChip Entertainment
                     </div>
                     <div class="footer-name">
-                        BlueChipfx
+                        Blue Music
                     </div>
                 </div>
                 <div class="footer-section1">
