--- a/moments.html
+++ b/moments.html
@@ -75,11 +75,14 @@
                     <div class="row">
                         <img src="./allimages/collaborative-process-indian-business-mans-during-brainstorming-meeting-officediverse-team-young-people-dressed-suits-cooperating-developing-common-project.png"
                             alt="" class="momentimg hidden">
-                        <img src="./allimages/business-people-working-financial-degrees.png" alt="" class="momentimg hidden">
-                        <img src="./allimages/pensive-concentrated-managers-standing-modern-cafe.png" alt="" class="momentimg hidden">
+                        <img src="./allimages/business-people-working-financial-degrees.png" alt=""
+                            class="momentimg hidden">
+                        <img src="./allimages/pensive-concentrated-managers-standing-modern-cafe.png" alt=""
+                            class="momentimg hidden">
                     </div>
                     <div class="row">
-                        <img src="./allimages/close-up-business-people-hands-together-teamwork-concept.png" alt="" class="momentimg hidden">
+                        <img src="./allimages/close-up-business-people-hands-together-teamwork-concept.png" alt=""
+                            class="momentimg hidden">
                         <img src="./allimages/business-handshake-finance-prosperity-money-technology-asset-background.png"
                             alt="" class="momentimg hidden">
                         <img src="./allimages/company-employees-discussing-market-data-charts-skilled-woman-leader-two-men-looking-diagrams-computer-screen-analyzing-profit-growth-business-growth-female-business-leaders-concept.png"
@@ -102,7 +105,7 @@
         <div class="footer-insider">
             <div class="footer-top">
                 <div class="footer-top-right">
-                    <img src="./allimages/Image 7.png" alt="" id="subscribe"> Subscribe to our Newsletter
+                    <img src="./allimages/newsletter-icon (1).png" alt="" id="subscribe"> Subscribe to our Newsletter
                 </div>
                 <div class="footer-top-left">
                     <input type="email" name="email" id="email" placeholder="Your email">
@@ -118,10 +121,11 @@
                         <i class="fa-solid fa-phone-volume" id="footer-phone"></i> +97142556168
                     </div>
                     <div class="footer-mail">
-                        <i class="fa-solid fa-envelope" id="footer-phone"></i> info@smaple.com
+                        <i class="fa-solid fa-envelope" id="footer-phone"></i> info@bluechipgroup.me
                     </div>
                     <div class="footer-location">
-                        <i class="fa-solid fa-location-dot" id="footer-phone"></i> 012 Sample, Street, Dubai
+                        <i class="fa-solid fa-location-dot" id="footer-phone"></i> Al Jawhara Building – Khalid Bin Al
+                        Waleed Road - Office 308 – Dubai, UAE.
                     </div>
                 </div>
                 <div class="footer-section1">
@@ -129,7 +133,7 @@
                         Business Verticals
                     </div>
                     <div class="footer-name">
-                        Blue Music
+                        BlueChipFx
                     </div>
                     <div class="footer-name">
                         Acre n Yard
@@ -138,7 +142,7 @@
                         BlueChip Entertainment
                     </div>
                     <div class="footer-name">
-                        BlueChip TradeX
+                        Blue Music
                     </div>
                 </div>
                 <div class="footer-section1">
