--- a/we.html
+++ b/we.html
@@ -224,7 +224,7 @@
         <div class="footer-insider">
             <div class="footer-top">
                 <div class="footer-top-right">
-                    <img src="./allimages/Image 7.png" alt="" id="subscribe"> Subscribe to our Newsletter
+                    <img src="./allimages/newsletter-icon (1).png" alt="" id="subscribe"> Subscribe to our Newsletter
                 </div>
                 <div class="footer-top-left">
                     <input type="email" name="email" id="email" placeholder="Your email">
@@ -240,10 +240,10 @@
                         <i class="fa-solid fa-phone-volume" id="footer-phone"></i> +97142556168
                     </div>
                     <div class="footer-mail">
-                        <i class="fa-solid fa-envelope" id="footer-phone"></i> info@smaple.com
+                        <i class="fa-solid fa-envelope" id="footer-phone"></i> info@bluechipgroup.me
                     </div>
                     <div class="footer-location">
-                        <i class="fa-solid fa-location-dot" id="footer-phone"></i> 012 Sample, Street, Dubai
+                        <i class="fa-solid fa-location-dot" id="footer-phone"></i>  Al Jawhara Building – Khalid Bin Al Waleed Road - Office 308 – Dubai, UAE.
                     </div>
                 </div>
                 <div class="footer-section1">
@@ -251,7 +251,7 @@
                         Business Verticals
                     </div>
                     <div class="footer-name">
-                        Blue Music
+                        BlueChipFx
                     </div>
                     <div class="footer-name">
                         Acre n Yard
@@ -260,7 +260,7 @@
                         BlueChip Entertainment
                     </div>
                     <div class="footer-name">
-                        BlueChip TradeX
+                        Blue Music
                     </div>
                 </div>
                 <div class="footer-section1">
