--- a/moments.html
+++ b/moments.html
@@ -66,26 +66,26 @@
             <div class="gallery-body">
                 <div class="image-container">
                     <div class="row">
-                        <img src="./allimages/brokers-discussing-trading-strategy-holding-papers-with-financial-data-pointing-pen-charts-cropped-shot-broker-job-stock-market-exchange-concept.png"
+                        <img src="./allimages/1.jpg"
                             alt="" class="momentimg hidden">
-                        <img src="./allimages/forex-trade-graph-chart-concept.png" class="momentimg hidden" alt="">
-                        <img src="./allimages/business-man-trader-investor-analysis-stock-market-concept-trading-fund-data-statistic.png"
+                        <img src="./allimages/2.jpg" class="momentimg hidden" alt="">
+                        <img src="./allimages/3.jpg"
                             alt="" class="momentimg hidden">
                     </div>
                     <div class="row">
-                        <img src="./allimages/collaborative-process-indian-business-mans-during-brainstorming-meeting-officediverse-team-young-people-dressed-suits-cooperating-developing-common-project.png"
+                        <img src="./allimages/4.jpg"
                             alt="" class="momentimg hidden">
-                        <img src="./allimages/business-people-working-financial-degrees.png" alt=""
+                        <img src="./allimages/5.jpg" alt=""
                             class="momentimg hidden">
-                        <img src="./allimages/pensive-concentrated-managers-standing-modern-cafe.png" alt=""
+                        <img src="./allimages/6.jpg" alt=""
                             class="momentimg hidden">
                     </div>
                     <div class="row">
-                        <img src="./allimages/close-up-business-people-hands-together-teamwork-concept.png" alt=""
+                        <img src="./allimages/7.jpg" alt=""
                             class="momentimg hidden">
-                        <img src="./allimages/business-handshake-finance-prosperity-money-technology-asset-background.png"
+                        <img src="./allimages/8.jpg"
                             alt="" class="momentimg hidden">
-                        <img src="./allimages/company-employees-discussing-market-data-charts-skilled-woman-leader-two-men-looking-diagrams-computer-screen-analyzing-profit-growth-business-growth-female-business-leaders-concept.png"
+                        <img src="./allimages/4.jpg"
                             alt="" class="momentimg hidden">
                     </div>
                 </div>
