--- a/ouroffering.html
+++ b/ouroffering.html
@@ -109,20 +109,25 @@
     <div class="acre">
         <div class="acre-insider">
             <div class="acre-left">
-                <div class="acre-left-header hidden">
-                    Acre n yard
+                <div class="acre-insider-left">
+                    <div class="acre-left-header hidden">
+                        Acre n yard
+                    </div>
+                    <div class="acre-content hidden">
+                        Acre N'Yard is a
+                        real estate investigation vertical in India and Dubai delivered by
+                        experienced investment managers at Bluechip Investments.<br><br>
+                        At BlueChip Group of Companies, we understand the importance of financial growth and security in
+                        today's rapidly changing business landscape. We are dedicated to empowering individuals and
+                        businesses alike to achieve their financial goals and safeguard their financial futures. With
+                        our
+                        comprehensive suite of services and expert guidance, we strive to provide the tools and support
+                        needed to navigate the path to prosperity.
+                    </div>
                 </div>
-                <div class="acre-content hidden">
-                    Acre N'Yard is a
-                    real estate investigation vertical in India and Dubai delivered by
-                    experienced investment managers at Bluechip Investments.<br><br>
-                    Acre N'Yard is focused om enabling real estate investments for all
-                    investor groups. Both investment pools and private investments in
-                    luxury real estate are available to all traders.Acre N'Yard operates
-                    under a real estate investment trust methodology, allowing traders
-                    to invest directly in real estate in the Indian and UAE markets in
-                    both common currencies.
-                </div>
+            </div>
+            <div class="acre-right">
+                <img src="./allimages/acre-n-yard-image.jpg" alt="" class="ancre-image">
             </div>
         </div>
     </div>
