--- a/we.html
+++ b/we.html
@@ -67,7 +67,7 @@
                         Established since more than a decade to provide extensive financial advisory and services
                         enabling
                         our client's financial growth and security. We organically grew in the fields of
-                        Forex trading, business setup services, realestate and asset management services.<br><br>
+                        Forex trading, business setup services, real estate and asset management services.<br><br>
 
                         Scoping for opportunities as a trait in the DNA led us to venture into the entertainment
                         business
@@ -129,6 +129,9 @@
                         us with a puropse and direction for you.
                     </div>
                 </div>
+            </div>
+            <div class="aboutus-final-bootom">
+                <h1 class="aboutus-final-bottom-text">Our Promises</h1>
             </div>
         </div>
     </div>
