--- a/index.html
+++ b/index.html
@@ -311,14 +311,16 @@
                     <div class="offering-header">
                         Enabling financial growth and security
                     </div>
-                    <div class="offering-content-1">
+                    <!-- <div class="offering-content-1">
                         We are the Bluechip group of companies with below business entities under the group. Bluechip
                         financials Market Ltd.
-                    </div>
+                    </div> -->
                     <div class="offering-content-2">
-                        An international online Forex and CFDs trading firm offering 24
-                        hours' access to a diverse reange of trading products including forex currency pair,
-                        commodities,futures,indices and stocks.
+                        At BlueChip Group of Companies, we understand the importance of financial growth and security in
+                        today's rapidly changing business landscape. We are dedicated to empowering individuals and
+                        businesses alike to achieve their financial goals and safeguard their financial futures. With
+                        our comprehensive suite of services and expert guidance, we strive to provide the tools and
+                        support needed to navigate the path to prosperity.
                     </div>
                     <div class="offering-points">
                         <ul class="offering-list">
@@ -495,7 +497,9 @@
     <!-- final footer ends -->
 
     <div class="imgrobo">
-        <img src="./allimages/final-mascot.png" alt="robot" class="robotimg " id="roborotate">
+        <a href="https://wa.me/message/ZA7OLXHUUDXQM1" target="_blank">
+            <img src="./allimages/final-mascot.png" alt="robot" class="robotimg " id="roborotate">
+        </a>
     </div>
 
     <!-- chatbot ends -->
