--- a/contact.html
+++ b/contact.html
@@ -239,6 +239,13 @@
         </div>
     </div>
     <!-- final footer ends -->
+    <div class="imgrobo">
+        <a href="https://wa.me/message/ZA7OLXHUUDXQM1" target="_blank">
+            <img src="./allimages/final-mascot.png" alt="robot" class="robotimg " id="roborotate">
+        </a>
+    </div>
+
+    <!-- chatbot ends -->
 
 
     <script src="./alljs/connect.js"></script>
