--- a/ouroffering.html
+++ b/ouroffering.html
@@ -59,7 +59,7 @@
     <div class="ourvictories">
         <div class="ourvictories-insider">
             <div class="ourvictories-left">
-                <img src="./allimages/portfolio-management-services-image.png" alt="our victories" id="ourvictoriesimg"
+                <img src="./allimages/portfolio-management.png" alt="our victories" id="ourvictoriesimg"
                     class="hidden">
             </div>
             <div class="ourvictories-right" id="victrt">
@@ -263,6 +263,13 @@
         </div>
     </div>
     <!-- final footer ends -->
+    <div class="imgrobo">
+        <a href="https://wa.me/message/ZA7OLXHUUDXQM1" target="_blank">
+            <img src="./allimages/final-mascot.png" alt="robot" class="robotimg " id="roborotate">
+        </a>
+    </div>
+
+    <!-- chatbot ends -->
 
     <script src="./alljs/ouroffering.js"></script>
 </body>
