--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
                 <i class="fa-solid fa-bars" id="faburger"></i>
             </div>
             <div class="nav-btn">
-                <button type="submit" class="nav-btn1"><i class="fa-regular fa-calendar-days"></i> Book an
-                    Appoinment</button>
+                <a href="./contact.html">
+                    <button type="submit" class="nav-btn1"><i class="fa-regular fa-calendar-days"></i> Book an
+                        Appoinment</button>
+                </a>
             </div>
         </div>
     </div>
@@ -415,7 +417,9 @@
                         <img src="./allimages/logo.png" alt="" height="70px">
                     </div>
                     <div class="footer-contact">
-                        <i class="fa-solid fa-phone-volume" id="footer-phone"></i> +97142556168
+                        <i class="fa-solid fa-phone-volume" id="footer-phone"></i> +97142556168 &nbsp; || &nbsp; +971
+                        564002452
+                        (WhatsApp)
                     </div>
                     <div class="footer-mail">
                         <i class="fa-solid fa-envelope" id="footer-phone"></i> info@bluechipgroup.me
@@ -457,10 +461,10 @@
                         Our Victories
                     </div>
                     <div class="footer-name">
-                        Connect
+                        Moments
                     </div>
                     <div class="footer-name">
-                        Moments
+                        Connect
                     </div>
                 </div>
                 <div class="footer-section1">
@@ -486,7 +490,7 @@
     <div class="final-footer">
         <div class="final-footer-insider">
             <div class="final-footer-right">
-                &copy; 2023 Blue Chip Group.All rights reserved
+                &copy; 2023 Blue Chip Group.&nbsp; All rights reserved
             </div>
             <div class="final-footer-left">
                 <div class="final-footer-content1">Privacy Policy</div>
