--- a/victories.html
+++ b/victories.html
@@ -38,8 +38,9 @@
                 <i class="fa-solid fa-bars" id="faburger"></i>
             </div>
             <div class="nav-btn">
-                <button type="submit" class="nav-btn1"><i class="fa-regular fa-calendar-days"></i> Book an
-                    Appoinment</button>
+                <a href="./contact.html"> <button type="submit" class="nav-btn1"><i
+                            class="fa-regular fa-calendar-days"></i> Book an
+                        Appoinment</button></a>
             </div>
         </div>
     </div>
@@ -161,13 +162,15 @@
                         <img src="./allimages/logo.png" alt="" height="70px">
                     </div>
                     <div class="footer-contact">
-                        <i class="fa-solid fa-phone-volume" id="footer-phone"></i> +97142556168
+                        <i class="fa-solid fa-phone-volume" id="footer-phone"></i> +97142556168 &nbsp; ||&nbsp; +971
+                        564002452 (WhatsApp)
                     </div>
                     <div class="footer-mail">
                         <i class="fa-solid fa-envelope" id="footer-phone"></i> info@bluechipgroup.me
                     </div>
                     <div class="footer-location">
-                        <i class="fa-solid fa-location-dot" id="footer-phone"></i>  Al Jawhara Building – Khalid Bin Al Waleed Road - Office 308 – Dubai, UAE.
+                        <i class="fa-solid fa-location-dot" id="footer-phone"></i> Al Jawhara Building – Khalid Bin Al
+                        Waleed Road - Office 308 – Dubai, UAE.
                     </div>
                 </div>
                 <div class="footer-section1">
@@ -201,10 +204,10 @@
                         Our Victories
                     </div>
                     <div class="footer-name">
-                        Connect
+                        Moments
                     </div>
                     <div class="footer-name">
-                        Moments
+                        Connect
                     </div>
                 </div>
                 <div class="footer-section1">
@@ -230,7 +233,7 @@
     <div class="final-footer">
         <div class="final-footer-insider">
             <div class="final-footer-right">
-                &copy; 2023 Blue Chip Group.All rights reserved
+                &copy; 2023 Blue Chip Group. &nbsp;All rights reserved
             </div>
             <div class="final-footer-left">
                 <div class="final-footer-content1">Privacy Policy</div>
