--- a/index.html
+++ b/index.html
@@ -59,15 +59,16 @@
         <div class="carousel-inner" id="carousel-inner-banner">
             <!-- hero carousel 1  -->
             <div class="carousel-item active">
-                <img src="./allimages/sonu sood.jpg" class="d-block w-100" id="hero-img" alt="Wild Landscape" />
+                <img src="./allimages/sonu sood.jpg" class="img-fluid d-block w-100" id="hero-img"
+                    alt="Wild Landscape" />
+                <img src="./allimages/1.png" class="w-100 img-fluid" alt="">
                 <div class="carousel-caption d-block d-md-block w-100" id="hero">
                     <div class="hero-insider">
                         <div class="hero-top hidden">
                             <div class="hero-right-content">
                                 <span class="hero-coloured">A decade old</span><br>
-                                <span class="hero-text">extensive financial advisory and services provider enabling
-                                    our </span>
-                                <span class="hero-strong">clients financial growth</span>
+                                <clients class="hero-text">extensive financial advisory and services provider enabling
+                                    our clients financial growth</span>
                             </div>
                             <div class="hero-right-btn">
                                 <button class="hero-btn">
@@ -81,13 +82,13 @@
             <!-- hero carousel 2 -->
             <div class="carousel-item">
                 <img src="./allimages/trade.jpg" class="d-block w-100" id="hero-img" alt="Wild Landscape" />
+                <img src="./allimages/2.png" class="d-block w-100 " alt="">
                 <div class="carousel-caption d-block d-md-block w-100" id="hero">
                     <div class="hero-insider">
                         <div class="hero-top hidden">
                             <div class="hero-right-content" id="hero-right-spacing">
                                 <span class="hero-coloured">Scoping for</span><br>
-                                <span class="hero-text">opportunities as a trait in the DNA embarking on a </span>
-                                <span class="hero-strong">path of possibilities
+                                <span class="hero-text">opportunities as a trait in the DNA embarking on a path of possibilities
                                 </span>
                             </div>
                             <div class="hero-right-btn">
@@ -102,14 +103,14 @@
             <!-- hero carousel 3  -->
             <div class="carousel-item">
                 <img src="./allimages/A&Y.jpg" class="d-block w-100" id="hero-img" alt="Wild Landscape" />
+                <img src="./allimages/3.png" class="d-block w-100" alt="">
                 <div class="carousel-caption d-block d-md-block w-100" id="hero">
                     <div class="hero-insider">
                         <div class="hero-top hidden">
                             <div class="hero-right-content">
                                 <span class="hero-coloured">A decade of</span><br>
                                 <span class="hero-text">transforming dreams into reality and making a lasting impact
-                                    by</span>
-                                <span class="hero-strong">investing in relationships</span>
+                                    by investing in relationships</span>
                             </div>
                             <div class="hero-right-btn">
                                 <button class="hero-btn">
@@ -133,9 +134,7 @@
         <div class="aboutus">
             <div class="about-insider">
                 <div class="aboutus-headers hidden">
-                    <!-- <div class="about-subheader">
-                        ABOUT US
-                    </div> -->
+
                     <div class="about-header" id="abthead">
                         Our Diversified Business
                     </div>
@@ -144,8 +143,8 @@
                 <div class="aboutus-body">
                     <div class="aboutus-logos">
                         <div class="aboutus-logo1">
-                            <img src="./allimages/music_col.png" alt="" class="aboutus-img-main">
                             <img src="./allimages/bluechip-fx_color.png" alt="" class="aboutus-img-main">
+                            <img src="./allimages/music_col.png" alt="" class="aboutus-img-main">
                             <img src="./allimages/acre-n-yard_c.png" alt="" class="aboutus-img-main">
                             <img src="./allimages/entertainment_c.png" alt="" class="aboutus-img-main">
                             <img src="./allimages/Bluechip-investmant-log0_color.png" alt="" class="aboutus-img-main">
@@ -313,10 +312,7 @@
                     <div class="offering-header">
                         Enabling financial growth and security
                     </div>
-                    <!-- <div class="offering-content-1">
-                        We are the Bluechip group of companies with below business entities under the group. Bluechip
-                        financials Market Ltd.
-                    </div> -->
+
                     <div class="offering-content-2">
                         At BlueChip Group of Companies, we understand the importance of financial growth and security in
                         today's rapidly changing business landscape. We are dedicated to empowering individuals and
@@ -326,13 +322,13 @@
                     </div>
                     <div class="offering-points">
                         <ul class="offering-list">
-                            <li><i class="fa-regular fa-circle-check" id="offering-icons"></i>Bluechip fx</li>
-                            <li><i class="fa-regular fa-circle-check" id="offering-icons"></i>Acre n Yard registered in
+                            <li>Bluechip fx</li>
+                            <li>Acre n Yard registered in
                                 UAE
                             </li>
-                            <li><i class="fa-regular fa-circle-check" id="offering-icons"></i>BlueChip Entertainment
+                            <li>BlueChip Entertainment
                             </li>
-                            <li><i class="fa-regular fa-circle-check" id="offering-icons"></i>Blue Music</li>
+                            <li>Blue Music</li>
                         </ul>
                     </div>
                     <div class="offering-btn">
