--- a/ouroffering.html
+++ b/ouroffering.html
@@ -112,7 +112,7 @@
             <div class="acre-left">
                 <div class="acre-insider-left">
                     <div class="acre-left-header hidden">
-                        Acre n yard
+                        Acre N' Yard
                     </div>
                     <div class="acre-content hidden">
                         Acre N'Yard is a
@@ -134,38 +134,6 @@
     </div>
 
     <!-- acre section ends -->
-
-    <!-- tradex section starts -->
-    <!-- <div class="tradex">
-        <div class="tradex-insider">
-            <div class="tradex-left">
-                <div class="tradex-left-inner">
-                    <div class="tradex-header hidden">
-                        BlueChip TradeX-
-                    </div>
-                    <div class="tradex-content hidden">
-                        BlueChip TradeX is an international online Forex and CFD trading
-                        company that provides 24 hour access to a wide variety of trading
-                        instruments including forex currency pairs, commodities, futures,
-                        indices and stocks. Benifit from high liquidity, low spreads, mobile
-                        trading,technical analysis and more through Bluechip TradeX and the
-                        world-renowned MetaTrader 5 trading platform<br>
-                        We maintain a safe trading environment and maintain high standards
-                        to provide the best customized trading conditions for each client.We
-                        help forex traders develop the knowledge and skills they need to<br><br>
-                        trade efficientlyand responsibly.With daily market analysis, we bring
-                        our beloved clients the latest market insights everyday.
-                    </div>
-                </div>
-            </div>
-            <div class="tradex-right">
-                <img src="./allimages/workplace-trader-young-bearded-trader-wearing-eyeglasses-using-his-laptop-while-sitting-office.png"
-                    alt="" class="tradex-img">
-            </div>
-        </div>
-    </div> -->
-
-    <!-- tradex section ends -->
 
     <!-- footer starts -->
     <div class="footer">
